--- a/styles/main.module.css
+++ b/styles/main.module.css
@@ -1,16 +1,23 @@
 .center {
 	/* width: 30rem;
 	height: 30rem; */
-	background-color: red;
+	/* background-color: red;
 	padding: 6rem;
 	border-radius: 50%;
-	width: 60rem;
+	width: 60rem; */
+
+	background-color: #3e3e3e;
+	border: 10px solid #8b5e3c;
+	border-radius: 20px;
+	box-shadow: 0px 0px 10px #8b5e3c;
+	padding: 3rem;
 }
 
 .main {
 	display: grid;
 	place-items: center;
 	min-height: 100vh;
+	font-size: 4rem;
 }
 
 .header {
@@ -20,8 +27,9 @@
 
 .currNum {
 	text-align: center;
-	font-size: 2rem;
+	font-size: 3rem;
 	margin-bottom: 1rem;
+	height: 3rem;
 }
 
 .waiting {
@@ -34,19 +42,31 @@
 	font-size: 2.6rem;
 	margin-bottom: 6rem;
 }
+.list_container {
+	min-height: 11rem;
+	width: 100%;
+	justify-self: center;
+	align-self: center;
+}
 
 .item {
 	list-style-type: none;
-	font-size: 1.6rem;
+	font-size: 2rem;
 	margin-top: 0.7rem;
-	border-bottom: 1px solid black;
+	padding-bottom: 0.4rem;
+	border-bottom: 1px solid white;
+	justify-content: space-between;
+	align-items: space-between;
+	display: flex;
+	max-width: 90%;
+	margin-left: 5%;
 }
 
 .btn {
 	background-color: #4caf50; /* Green */
 	border: none;
 	color: white;
-	padding: 45px 72px;
+	padding: 20px 30px;
 	text-align: center;
 	text-decoration: none;
 	display: block;
@@ -54,8 +74,8 @@
 	font-size: 16px;
 	cursor: pointer;
 	justify-self: center;
-	max-width: 70%;
-	margin-bottom: 2rem;
+	max-width: fit-content;
+	margin: 2rem;
 }
 .form {
 	display: flex;
@@ -63,9 +83,31 @@
 	align-items: center;
 	margin-top: 2rem;
 	gap: 1rem;
+	color: black;
 }
 .add_input {
-	padding: 0.6rem;
+	padding: 1rem;
+	color: black;
+}
+
+.form_controller label {
+	display: flex;
+	flex-direction: column;
+	margin: 1rem;
+	gap: 1rem;
+}
+
+.remove {
+	color: rgb(223, 36, 36);
+	font-weight: bold;
+	display: inline-block;
+	/* margin-left: 0.5rem; */
+}
+
+.remove:hover {
+	scale: 1.2;
+	transition: scale 0.2s;
+	cursor: pointer;
 }
 
 .button {
@@ -80,8 +122,40 @@
 }
 
 .flex {
-	display: flex;
-	gap: 6rem;
+	/* display: flex;
+	text-align: center;
+	justify-content: space-around; */
+	display: grid;
+	grid-template-columns: 1fr 2px 1fr;
+	align-items: center;
+	text-align: center;
+}
 
-	justify-content: space-around;
+.wrapper {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.center_line {
+	width: 2px;
+	background: white;
+	height: 100%;
+}
+
+@media only screen and (max-width: 600px) {
+	.flex {
+		grid-template-columns: 1fr;
+	}
+	.center_line {
+		width: 100%;
+		background: white;
+		height: 2px;
+		margin: 4rem 0rem 2rem 0rem;
+	}
+}
+@media only screen and (max-width: 450px) {
+	.header {
+		font-size: 6rem;
+	}
 }
