--- a/styles/main.module.css
+++ b/styles/main.module.css
@@ -28,8 +28,9 @@
 .currNum {
 	text-align: center;
 	font-size: 3rem;
-	margin-bottom: 1rem;
+	margin-bottom: 3rem;
 	height: 3rem;
+	position: relative;
 }
 
 .waiting {
@@ -60,6 +61,7 @@
 	display: flex;
 	max-width: 90%;
 	margin-left: 5%;
+	position: relative;
 }
 
 .btn {
@@ -95,6 +97,7 @@
 	flex-direction: column;
 	margin: 1rem;
 	gap: 1rem;
+	position: relative;
 }
 
 .remove {
@@ -119,12 +122,15 @@
 	text-decoration: none;
 	display: inline-block;
 	font-size: 16px;
+	margin-bottom: 2rem;
+}
+
+.button:hover {
+	background-color: #46a249;
+	cursor: pointer;
 }
 
 .flex {
-	/* display: flex;
-	text-align: center;
-	justify-content: space-around; */
 	display: grid;
 	grid-template-columns: 1fr 2px 1fr;
 	align-items: center;
@@ -146,6 +152,63 @@
 .play {
 	padding: 1rem;
 	color: black;
+}
+
+.green {
+	background-color: green;
+	outline: none;
+	border: 2px solid #4caf50;
+	color: white;
+}
+
+.twice {
+	position: absolute;
+	right: 10%;
+	color: #ffa723;
+}
+
+.times_2 {
+	padding: 10px 32px;
+	color: black;
+	margin-left: 1rem;
+	cursor: pointer;
+}
+
+.times_2:hover {
+	background-color: #4caf50;
+	outline: none;
+	border: 2px solid #4caf50;
+	color: white;
+	transition: background-color 0.2s, color 0.2s;
+}
+
+.floating_numbers {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	font-size: 15px;
+	visibility: hidden;
+	color: white;
+	opacity: 0;
+	animation-fill-mode: forwards;
+}
+
+@keyframes floating {
+	from {
+		transform: translate(-50%, -50%) translateY(0);
+		opacity: 1;
+	}
+	to {
+		opacity: 0;
+		transform: translate(-50%, -50%) translateY(-100px);
+	}
+}
+
+.floating_numbers[floating='1'] {
+	animation: floating 1s ease-in-out;
+	visibility: visible;
+	color: white;
 }
 
 @media only screen and (max-width: 600px) {
